--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -11,7 +11,7 @@
             <view>辛苦耐心稍等待，</view>
             <view>每日三次是上限，</view>
             <view>生成图片及时存。</view>
-            <view>祝您心想事成❤！</view>
+            <view>祝您心想事成❤</view>
         </view>
     </view>
     <!-- 输入内容浮动效果 -->
@@ -32,5 +32,5 @@
         </view>
     </view>
     <!-- 新增底部文字 -->
-    <view class="ai-generated-text">AI生成，仅供参考(交流群：88888888)</view>
+    <view class="ai-generated-text">AI生成，仅供参考(QQ交流群：88888888)</view>
 </view>
