--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -6,11 +6,11 @@
         <image hidden="{{!imageUrl}}" class="preview-image" src="{{imageUrl}}" mode="aspectFit" bindload="onImageLoad" />
         <!-- 新增内容 -->
         <view hidden="{{imageUrl}}" class="preview-text">
-            <view>《AI心想视成》</view>
+            <!-- <view>《AI心想视成》</view>
             <view>生成图片遇广告，</view>
             <view>辛苦耐心稍等待，</view>
             <view>每日三次是上限，</view>
-            <view>生成图片及时存。</view>
+            <view>生成图片及时存。</view> -->
             <view>祝您心想事成❤</view>
         </view>
     </view>
@@ -32,5 +32,6 @@
         </view>
     </view>
     <!-- 新增底部文字 -->
-    <view class="ai-generated-text">AI生成，仅供参考(QQ交流群：88888888)</view>
+    <!-- <view class="ai-generated-text">AI生成，仅供参考(QQ交流群：88888888)</view> -->
+    <view class="ai-generated-text">AI生成，仅供参考</view>
 </view>
