--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -10,7 +10,7 @@
     <view class="p-4 flex items-center justify-between">
         <image class="calendar" src="../../images/icons/calendar.png" bindtap="toggleCalendar" />
         <view class="text-xl font-medium">{{formattedDate}}</view>
-        <button bindtap="startRecording" class="btn btn-blue btn-rounded">记录</button>
+        <view bindtap="startRecording" class="btn btn-blue btn-rounded">记录</view>
     </view>
     <view wx:if="{{showCalendar}}" class="calendar-overlay" bindtap="hideCalendar">
         <calendar view="month" id="calendar" bindclick="calendarBindclick" />
