--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -20,20 +20,8 @@
         <!-- 有当日情绪时显示 -->
         <view wx:if="{{dailyEmotion}}" class="flex flex-col items-center mb-6">
             <!-- 情绪图标 -->
-            <view wx:if="{{dailyEmotion.icon === 'flower-purple'}}" class="w-20 h-20 bg-purple-300 rounded-full flex items-center justify-center mb-4">
-                <view class="w-12 h-12 bg-purple-500 rounded-full"></view>
-            </view>
-            <view wx:elif="{{dailyEmotion.icon === 'flower-indigo'}}" class="w-20 h-20 bg-indigo-300 rounded-full flex items-center justify-center mb-4">
-                <view class="w-12 h-12 bg-indigo-500 rounded-full"></view>
-            </view>
-            <view wx:elif="{{dailyEmotion.icon === 'circle'}}" class="w-20 h-20 bg-sky-200 rounded-full flex items-center justify-center mb-4">
-                <view class="w-12 h-12 bg-sky-400 rounded-full"></view>
-            </view>
-            <view wx:elif="{{dailyEmotion.icon === 'flower-yellow'}}" class="w-20 h-20 bg-yellow-200 rounded-full flex items-center justify-center mb-4">
-                <view class="w-12 h-12 bg-yellow-400 rounded-full"></view>
-            </view>
-            <view wx:elif="{{dailyEmotion.icon === 'flower-gold'}}" class="w-20 h-20 bg-amber-200 rounded-full flex items-center justify-center mb-4">
-                <view class="w-12 h-12 bg-amber-400 rounded-full"></view>
+            <view style="background-color:{{dailyEmotion.color}}" class="w-20 h-20 rounded-full flex items-center justify-center mb-4">
+                <view style="background-color:{{dailyEmotion.colorC}}" class="w-12 h-12 rounded-full"></view>
             </view>
             <view class="text-2xl font-bold mb-1">{{dailyEmotion.name}}</view>
             <view wx:if="{{dailyEmotion.factors.length > 0}}" class="mt-2 flex flex-wrap justify-center">
@@ -61,20 +49,8 @@
             <block wx:if="{{momentaryEmotions.length > 0}}">
                 <view wx:for="{{momentaryEmotions}}" wx:key="id" class="flex items-center mb-4">
                     <!-- 情绪图标 -->
-                    <view wx:if="{{item.icon === 'flower-purple'}}" class="w-12 h-12 bg-purple-300 rounded-full flex items-center justify-center mr-4">
-                        <view class="w-8 h-8 bg-purple-500 rounded-full"></view>
-                    </view>
-                    <view wx:elif="{{item.icon === 'flower-indigo'}}" class="w-12 h-12 bg-indigo-300 rounded-full flex items-center justify-center mr-4">
-                        <view class="w-8 h-8 bg-indigo-500 rounded-full"></view>
-                    </view>
-                    <view wx:elif="{{item.icon === 'circle'}}" class="w-12 h-12 bg-sky-200 rounded-full flex items-center justify-center mr-4">
-                        <view class="w-8 h-8 bg-sky-400 rounded-full"></view>
-                    </view>
-                    <view wx:elif="{{item.icon === 'flower-yellow'}}" class="w-12 h-12 bg-yellow-200 rounded-full flex items-center justify-center mr-4">
-                        <view class="w-8 h-8 bg-yellow-400 rounded-full"></view>
-                    </view>
-                    <view wx:elif="{{item.icon === 'flower-gold'}}" class="w-12 h-12 bg-amber-200 rounded-full flex items-center justify-center mr-4">
-                        <view class="w-8 h-8 bg-amber-400 rounded-full"></view>
+                    <view style="background-color:{{item.color}}" class="w-12 h-12 rounded-full flex items-center justify-center mr-4">
+                        <view style="background-color:{{item.colorC}}" class="w-8 h-8 rounded-full"></view>
                     </view>
                     <view class="flex-1">
                         <view class="font-medium">{{item.name}}</view>
