--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: center;
 }
-.calendar{
+.index-icon{
   margin: 0 5px;
   width: 40px;
   height: 40px;
