--- a/miniprogram/pages/emotion-factors/emotion-factors.wxml
+++ b/miniprogram/pages/emotion-factors/emotion-factors.wxml
@@ -1,5 +1,5 @@
 <!-- pages/emotion-factors/emotion-factors.wxml -->
-<wxs module="includes" src="../../utils/includes.wxs"></wxs>
+<wxs module="utils" src="../../utils/util.wxs"></wxs>
 <view class="container bg-gray-100">
     <view class="header p-4 flex items-center bg-white">
         <view class="back-icon text-blue-500" bindtap="goBack">
@@ -23,7 +23,7 @@
             <view class="text-gray-500 mb-4">是什么影响了您的情绪？（可多选）</view>
             <view wx:for="{{factorCategories}}" wx:key="index" class="mb-4">
                 <view class="flex flex-wrap">
-                    <view wx:for="{{item}}" wx:for-item="factor" wx:key="*this" class="{{includes.includes(selectedFactors,factor) ? 'tag tag-selected' : 'tag'}}" data-factor="{{factor}}" bindtap="toggleFactor">
+                    <view wx:for="{{item}}" wx:for-item="factor" wx:key="*this" class="{{utils.includes(selectedFactors,factor) ? 'tag tag-selected' : 'tag'}}" data-factor="{{factor}}" bindtap="toggleFactor">
                         {{factor}}
                     </view>
                 </view>
