--- a/miniprogram/pages/statistics/statistics.wxml
+++ b/miniprogram/pages/statistics/statistics.wxml
@@ -11,7 +11,7 @@
         </view>
         <!-- 分析按钮 -->
         <view class="analyze-button-container">
-            <button class="analyze-button" bindtap="analyzeEmotion">分析情绪</button>
+            <button class="analyze-button" bindtap="analyzeEmotion">情绪小助手</button>
         </view>
         <!-- 分析Loading弹窗 -->
         <view class="loading-modal" wx:if="{{showLoadingModal}}">
@@ -30,9 +30,7 @@
                     <scroll-view scroll-y class="analysis-content">{{analysisResult}}</scroll-view>
                 </view>
                 <view class="modal-footer">
-                    <button style="line-height: normal; padding: 20rpx 0;" bindtap="closeAnalysisModal">
-                        关闭
-                    </button>
+                    <button class="modal-btn" bindtap="closeAnalysisModal">关闭</button>
                 </view>
             </view>
         </view>
@@ -48,9 +46,7 @@
                 <text class="empty-text">您还没有情绪记录，快去记录吧~</text>
             </view>
             <view class="modal-footer">
-                <button style="line-height: normal; padding: 20rpx 0;" bindtap="goToRecord">
-                    去记录
-                </button>
+                <button class="modal-btn" bindtap="goToRecord">去记录</button>
             </view>
         </view>
     </view>
@@ -59,27 +55,27 @@
         <view class="modal-content">
             <view class="modal-header">
                 <image class="emotion-icon" src="../../images/icons/{{selectedEmotion.type}}.png" />
-                <text class="emotion-name">{{selectedEmotion.name}}</text>
-                <text class="emotion-time">
+                <view class="emotion-name">{{selectedEmotion.name}}</view>
+                <view class="emotion-name">
                     {{selectedEmotion.recordType === 'daily' ? utils.formatDate(selectedEmotion.timestamp): utils.formatDateTime(selectedEmotion.timestamp)}}
-                </text>
+                </view>
             </view>
             <view class="modal-body">
                 <view class="emotion-value">情绪值：{{selectedEmotion.value}}</view>
                 <view class="emotion-details" wx:if="{{selectedEmotion.details.length > 0}}">
                     <text class="section-title">详细感受：</text>
-                    <view class="detail-tags">
-                        <text wx:for="{{selectedEmotion.details}}" wx:key="*this" class="tag" style="line-height: normal;">
-                            {{item}}
-                        </text>
+                    <view class="tags">
+                        <view wx:for="{{selectedEmotion.details}}" wx:for-item="detail" wx:key="*this" class="text-xs text-gray-500 bg-gray-100 rounded-full px-2 py-0-5 mr-1 mt-1">
+                            {{detail}}
+                        </view>
                     </view>
                 </view>
                 <view class="emotion-factors" wx:if="{{selectedEmotion.factors.length > 0}}">
                     <text class="section-title">情绪因素：</text>
-                    <view class="factor-tags">
-                        <text wx:for="{{selectedEmotion.factors}}" wx:key="*this" class="tag" style="line-height: normal;">
-                            {{item}}
-                        </text>
+                    <view class="tags">
+                        <view wx:for="{{selectedEmotion.factors}}" wx:for-item="factor" wx:key="*this" class="text-xs text-gray-500 bg-gray-100 rounded-full px-2 py-0-5 mr-1 mt-1">
+                            {{factor}}
+                        </view>
                     </view>
                 </view>
                 <view class="emotion-context" wx:if="{{selectedEmotion.customContext}}">
@@ -88,9 +84,7 @@
                 </view>
             </view>
             <view class="modal-footer">
-                <button style="line-height: normal; padding: 20rpx 0;" bindtap="closeModal">
-                    关闭
-                </button>
+                <button class="modal-btn" bindtap="closeModal">关闭</button>
             </view>
         </view>
     </view>
